<resources>
    <string name="app_name">BlackNOjack</string>
    <string name="play">Play</string>
    <string name="rules">Rules</string>
    <string name="dealers_hand">Dealer´s hand</string>
    <string name="yours_hand">Your´s hand</string>
    <string name="hit">Hit</string>
    <string name="stand">Stand</string>
    <string name="surrender">Surrender</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="win_header">Win</string>
    <string name="lose_header">Lose</string>
    <string name="draw_header">Draw</string>
    <string name="lose_game_header">Game over</string>
    <string name="surrender_header">Surrender</string>
    <string name="win_text">You win the round! :)</string>
    <string name="lose_text">You lose the round! :(</string>
    <string name="draw_text">It is draw!</string>
    <string name="lose_game_text">Your bet is too high!</string>
    <string name="surrender_text">Are you sure, that you want to surrender?</string>
    <string name="continue_string">Continue</string>
    <string name="main_menu">Main menu</string>
    <string name="next_round">Next round</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Rules -->


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="place_bet">Place bet</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="game">Game</string>
    <string name="player_name">Player name</string>
    <string name="card_back_color">Card back color</string>
    <string name="default_bank">Default bank</string>
    <string name="dark_mode">Dark mode</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="author">Tomáš Vyleta, 2021</string>
    <string name="game_landscape">Game landscape</string>
    <string name="rules_content"><![CDATA[<h1> Card values ​​</h1>
        <p>
            Cards from two to ten (2 - 10) have the value indicated on the card.
            The cards J (jack), Q (queen) and K (king) have a value of 10,
            card A (ace) has a value of 1 (there is a change, the player cannot decide what value the card will have).
        </p>

    <h1> Goal of the game </h1>
        <p>
            The principle of the game is the same, namely that the player wants to collect cards in a value closer to the total sum of 21 cards than the dealer, but must not exceed this value.
            A player whose sum of cards exceeds 21. is eliminated from the game and loses.
            In the case of the same number of player and croupier points, the game is a draw and no one wins.
        </p>

    <h1> Game progress </h1>
        <ol>
            <li>At the beginning of each game, you have to choose a bet and then the dealer starts dealing cards.</li>
            <li>At the beginning of each round, the dealer deals two cards to the player and gives him one card.</li>
            <li>After the cards are dealt, the player has the option of 2 actions:</li>
            <ul>
                <li>get another card (Hit),</li>
                <li>let dealer turn (Stand),</li>
                <li>other options such as Split and Double are not possible.</li>
            </ul>
        </ol>

    <h1> The croupier and his game </h1>
        <p>
           In normal Blackjack, the dealer has certain rules on how to play:
            <ul>
                <li>deal another card if the sum of his cards is less than 17,</li>
                <li>stay standing when the sum of his cards is 17 and higher.</li>
            </ul>
            For this game, however, I opted for my own algorithm, which is based on the probability and chance of another card falling.
        </p>
    ]]>
    </string>
    <string name="wipeout">wipeout</string>
    <string name="truncate_database_text">Are you sure, that you want delete all data from scoreboard?</string>
    <string name="truncate_database_header">Truncate database</string>
    <string name="truncate_database_toast">Database was succesfully truncate!</string>
    <string name="bet">Bet</string>
</resources>